--- a/package.json
+++ b/package.json
@@ -3,22 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "deploy": "vercel",
+    "build": "frog vercel-build",
+    "dev": "npx @airstack/frog dev",
+    "deploy": "vercel --prod",
+    "deploy:preview": "vercel",
     "start": "next start",
     "lint": "next lint",
     "devtools": "npx frog"
   },
   "dependencies": {
-    "@airstack/frog": "^0.0.7",
+    "@airstack/frog": "latest",
     "@resvg/resvg-js": "^2.6.0",
-    "next": "14.1.0",
+    "dotenv": "^16.4.5",
+    "hono": "^4.5.4",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.2"
   },
   "devDependencies": {
+    "deploy": "vercel",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
